<resources>
    <string name="app_name">Trivia App</string>
    <string name="hint_name">Name</string>
    <string name="next">Next</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="who_is_the_best_cricketer_in_the_world">Who is the best cricketer in the world?</string>
    <string name="what_are_the_colors_in_the_indian_national_flag">What are the colors in the Indian national flag?</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="finish">Finish</string>
    <string name="sachin_tendulkar">Sachin Tendulkar</string>
    <string name="virat_kohli">Virat Kohli</string>
    <string name="adam_gilchrist">Adam Gilchrist</string>
    <string name="jacques_kallis">Jacques Kallis</string>
    <string name="history">History</string>
    <string name="here_are_the_answers_selected">Here are the answers selected:</string>
    <string name="name_suffix">Name :</string>
    <string name="hello_suffix">Hello, </string>
    <string name="answer_suffix">Answer: </string>
    <string name="multiple_answer_suffix">Answers: </string>
    <string name="game_suffix">Game </string>
</resources>