<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.CricketerFragment">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/QuestionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who_is_the_best_cricketer_in_the_world"
        app:layout_constraintBottom_toTopOf="@id/rgCricketer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgCricketer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbtnSachin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sachin_tendulkar"
            android:textSize="20sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbtnVirat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/virat_kohli"
            android:textSize="20sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbtnAdam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/adam_gilchrist"
            android:textSize="20sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbtnJacques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/jacques_kallis"
            android:textSize="20sp" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:background="@drawable/bg_rounded_button"
        android:drawableEnd="@drawable/ic_next"
        android:text="@string/next"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>