<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ColorFragment">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/QuestionStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:gravity="center"
        android:text="@string/what_are_the_colors_in_the_indian_national_flag"
        app:layout_constraintBottom_toTopOf="@id/chkWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/chkWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/chkYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/chkYellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/chkOrange"
        app:layout_constraintEnd_toEndOf="@id/chkWhite"
        app:layout_constraintStart_toStartOf="@id/chkWhite"
        app:layout_constraintTop_toBottomOf="@id/chkWhite" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/chkOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orange"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/chkGreen"
        app:layout_constraintEnd_toEndOf="@id/chkWhite"
        app:layout_constraintStart_toStartOf="@id/chkWhite"
        app:layout_constraintTop_toBottomOf="@id/chkYellow" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/chkGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/chkWhite"
        app:layout_constraintStart_toStartOf="@id/chkWhite"
        app:layout_constraintTop_toBottomOf="@id/chkOrange" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:background="@drawable/bg_rounded_button"
        android:drawableEnd="@drawable/ic_next"
        android:text="@string/next"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>