<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/medium_margin"
    android:layout_marginTop="@dimen/default_margin"
    android:layout_marginEnd="@dimen/medium_margin"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.fragment.FinishFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.FinishFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGameCounter"
            style="@style/QuestionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Game 1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGameCounter"
            tools:text="@tools:sample/date/ddmmyy" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvQue1"
            style="@style/QuestionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:text="@string/name_suffix"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDateTime" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAns1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvQue1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvQue1"
            tools:text="@tools:sample/lorem" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvQue2"
            style="@style/QuestionStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:text="@string/who_is_the_best_cricketer_in_the_world"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAns1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAns2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/medium_margin"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvQue1"
            app:layout_constraintTop_toBottomOf="@id/tvQue2"
            tools:text="@tools:sample/lorem" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvQue3"
            style="@style/QuestionStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:text="@string/what_are_the_colors_in_the_indian_national_flag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAns2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAns3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvQue1"
            app:layout_constraintTop_toBottomOf="@id/tvQue3"
            tools:text="@tools:sample/lorem" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>